Fix spacing on Home buttons

--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -78,6 +78,7 @@ label {
 .btn {
   & + & {
     margin-left: 0.5em;
+    margin-top: 0.5em;
   }
   &-link {
     color: var(--color-text-gray);
